--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,14 @@
-    language: python # => 1
-
-    python: # => 2
-
-      - "3.5"
-
-      - "3.6"
-
-    services: # => 3
-
-      - mysql
-
-    env: # => 4
-
-      -DJANGO=1.10 DB=mysql
-    install: # => 5
-
-      - pip install -r requirements.txt
-
-    before_script: # => 6
-
-      - mysql -e 'create database test;' -u root
-    script: # => 7
-
-      - python manage.py test
+language: python
+python:
+  - "3.5"
+  - "3.6"
+services:
+  - mysql
+env:
+  -DJANGO=1.10 DB=mysql
+install:
+  - pip install -r requirements.txt
+before_script:
+  - mysql -e 'create database test;' -u root
+script:
+  - python manage.py test
